feat: update UI and screen tracking sets up

--- a/src/translations/en/auth.json
+++ b/src/translations/en/auth.json
@@ -1,7 +1,22 @@
 {
     "landing": {
       "emailLogin": "Sign in with email",
-      "socialLogin": "Or Social medias"
+      "socialLogin": "Or Social medias",
+      "start": "Let’s Get Started",
+      "Already": "Already have an account?",
+      "Create": "Create an account",
+      "Welcome": "Welcome",
+      "required": "Please enter your data to continue"
+    },
+    "login": {
+      "Welcome": "Welcome",
+      "email": "Email",
+      "required": "Please enter your data to continue",
+      "userName": "Username",
+      "password": "Password",
+      "forgotPassword":"Forgot Password?",
+      "temp": "By connecting your account confirm that you agree with our",
+      "conditions": "Term and Condition"
     },
     "error": {
       "network": "Error network"
@@ -26,13 +41,17 @@
       "hasAccount": "Already have an account?",
       "name": "Name",
       "phone": "Phone Number",
-      "noHasAccount": "Don't have an account?"
+      "noHasAccount": "Don't have an account?",
+      "userName": "Username"
+
     },
     "placeholder" : {
       "email": "Enter your email address",
       "password": "Enter your password",
       "phone": "Enter your phone number",
-      "name": "Enter your name"
+      "name": "Enter your name",
+      "userName": "Enter your username"
+
     }
   }
   
