feat(login): init ui and refactor struct soucre base

--- a/src/translations/en/auth.json
+++ b/src/translations/en/auth.json
@@ -4,7 +4,7 @@
       "socialLogin": "Or Social medias",
       "start": "Let’s Get Started",
       "Already": "Already have an account?",
-      "Create": "Create an account",
+      "Create": "Continue with email",
       "Welcome": "Welcome",
       "required": "Please enter your data to continue"
     },
@@ -32,7 +32,8 @@
     },
     "header" : {
       "signIn": "Sign in",
-      "signUp": "Sign up"
+      "signUp": "Continue with your email",
+      "confirm": "Confirm"
     },
     "label" : {
       "email": "Email",
