feat: refactor and restruct & init auth screen

--- a/src/translations/en/auth.json
+++ b/src/translations/en/auth.json
@@ -33,7 +33,8 @@
     "header" : {
       "signIn": "Sign in",
       "signUp": "Continue with your email",
-      "confirm": "Confirm"
+      "confirm": "Confirm",
+      "verify": "Verify OTP code"
     },
     "label" : {
       "email": "Email",
@@ -43,7 +44,8 @@
       "name": "Name",
       "phone": "Phone Number",
       "noHasAccount": "Don't have an account?",
-      "userName": "Username"
+      "userName": "Username",
+      "otp": "OTP"
 
     },
     "placeholder" : {
@@ -51,8 +53,11 @@
       "password": "Enter your password",
       "phone": "Enter your phone number",
       "name": "Enter your name",
-      "userName": "Enter your username"
-
+      "userName": "Enter your username",
+      "OTP": "Enter the OTP code"
+    },
+    "button" : {
+      "sendOtp": "Send OTP"
     }
   }
   
